--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.10.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
